--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel=“preconnect” href=“https://fonts.gstatic.com”>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
     <header class="head">
-        <div>
+        <div class="container head-container">
 
         <!--Header-->
             <nav class="nav">
@@ -32,15 +33,21 @@
                     </li>
                 </ul>   
             </nav>
-            <a href="mailto:info@devstudio.com" class="head-mail link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="head-tel link">+38 096 111 11 11</a>
+            <ul class="list">
+                <li>
+                    <a href="mailto:info@devstudio.com" class="head-mail link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="head-tel link">+38 096 111 11 11</a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
 
         <!--Hat-->
         <section class="hero">
-            <div>
+            <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
             </div>
