--- a/portfolio.html
+++ b/portfolio.html
@@ -20,24 +20,24 @@
     
             <!--Header-->
             <nav class="nav">
-                <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+                <a href="./index.html" class="logo logo-head">Web<span class="logo-black">Studio</span></a>
                 <ul class="nav-list list">
                     <li class="nav-item">
-                        <a href="./index.html" class="nav-link link">Студия</a>
+                        <a href="./index.html" class="nav-link link current">Студия</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
+                        <a href="./portfolio.html" class="nav-link link">Портфолио</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contacts" class="nav-link link">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="list">
-                <li>
+            <ul class="nav-contact head-contact list">
+                <li class="nav-contact-item">
                     <a href="mailto:info@devstudio.com" class="head-mail link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="nav-contact-item">
                     <a href="tel:+380961111111" class="head-tel link">+38 096 111 11 11</a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
     </header>
     <main>
         <section class="portfolio">
-            <div>
+            <div class="container">
                 <ul class="portfolio-filter-list list">
                     <li>
                     <button class="filter-btn" type="button">Все</button>
@@ -114,7 +114,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div id="contacts">
+        <div id="contacts" class="container">
             <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
             <address class="italic-no">
                 <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
