--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!--Header-->
             <nav class="nav">
-                <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+                <a href="./index.html" class="logo logo-head">Web<span class="logo-black">Studio</span></a>
                 <ul class="nav-list list">
                     <li class="nav-item">
                         <a href="./index.html" class="nav-link link current">Студия</a>
@@ -33,11 +33,11 @@
                     </li>
                 </ul>   
             </nav>
-            <ul class="list">
-                <li>
+            <ul class="nav-contact head-contact list">
+                <li class="nav-contact-item">
                     <a href="mailto:info@devstudio.com" class="head-mail link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="nav-contact-item">
                     <a href="tel:+380961111111" class="head-tel link">+38 096 111 11 11</a>
                 </li>
             </ul>
@@ -47,15 +47,15 @@
 
         <!--Hat-->
         <section class="hero">
-            <div class="container">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <div class="hero-container container">
+                <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса<br></h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
             </div>
         </section>
 
         <!--feature-->
         <section class="feature">
-            <div>
+            <div class="feature-container container">
                 <ul class="feature-list list">
                     <li class="feature-inner-list">
                         <h3 class="feature-headline">Внимание к деталям</h3>
@@ -79,7 +79,7 @@
 
         <!--What we do-->
         <section class="example">
-            <div>
+            <div class="example-container container">
                 <h2 class="example-headline">Чем мы занимаемся</h2>
                     <ul class="example-list list">
                         <li class="example-box">
@@ -97,7 +97,7 @@
         
         <!--Our Team-->
         <section class="team">
-            <div>
+            <div class="container">
                 <h2 class="team-headline">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-inner-list">
@@ -125,7 +125,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div id="contacts">
+        <div id="contacts" class="container">
             <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
             <address class="italic-no">
                 <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
