--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                 <a href="./index.html" class="logo logo-head">Web<span class="logo-black">Studio</span></a>
                 <ul class="nav-list list">
                     <li class="nav-item">
-                        <a href="./index.html" class="nav-link link current">Студия</a>
+                        <a href="./index.html" class="nav-link link">Студия</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./portfolio.html" class="nav-link link">Портфолио</a>
+                        <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contacts" class="nav-link link">Контакты</a>
