--- a/index.html
+++ b/index.html
@@ -102,23 +102,31 @@
                 <ul class="team-list list">
                     <li class="team-inner-list">
                         <img class="team-ava" src="./img/our_team/igor.jpg" alt="Игорь Демьяненко" width="270" height="260"/>
-                        <h3 class="team-inner-name">Игорь Демьяненко</h3>
-                        <p class="team-position">Product Designer</p>
+                        <div class="team-container">
+                            <h3 class="team-inner-name">Игорь Демьяненко</h3>
+                            <p class="team-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-inner-list">
                         <img class="team-ava" src="./img/our_team/olga.jpg" alt="Ольга Репина" width="270" height="260"/>
-                        <h3 class="team-inner-name">Ольга Репина</h3>
-                        <p class="team-position">Frontend Developer</p>
+                        <div class="team-container">
+                            <h3 class="team-inner-name">Ольга Репина</h3>
+                            <p class="team-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-inner-list">
                         <img class="team-ava" src="./img/our_team/nikola.jpg" alt="Николай Тарасов" width="270" height="260"/>
-                        <h3 class="team-inner-name">Николай Тарасов</h3>
-                        <p class="team-position">Marketing</p>
+                        <div class="team-container">
+                            <h3 class="team-inner-name">Николай Тарасов</h3>
+                            <p class="team-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-inner-list">
                         <img class="team-ava" src="./img/our_team/michael.jpg" alt="Михаил Ермаков" width="270" height="260"/>
-                        <h3 class="team-inner-name">Михаил Ермаков</h3>
-                        <p class="team-position">UI Designer</p>
+                        <div class="team-container">
+                            <h3 class="team-inner-name">Михаил Ермаков</h3>
+                            <p class="team-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -128,9 +136,18 @@
         <div id="contacts" class="container">
             <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
             <address class="italic-no">
-                <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
-                <a href="mailto:info@example.com" class="contact-style link">info@example.com</a>
-                <a href="tel:+380991111111" class="contact-style link">+38 099 111 11 11</a>
+                <ul class="footer-list list">
+                    <li>
+                        <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@example.com" class="contact-style link">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380991111111" class="contact-style link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+                
             </address>
         </div>
     </footer>
