--- a/portfolio.html
+++ b/portfolio.html
@@ -47,67 +47,85 @@
         <section class="portfolio">
             <div class="container">
                 <ul class="portfolio-filter-list list">
-                    <li>
-                    <button class="filter-btn" type="button">Все</button>
+                    <li class="portfolio-filter">
+                        <button class="filter-btn" type="button">Все</button>
                     </li>
-                    <li>
-                    <button class="filter-btn" type="button">Веб-сайты</button>
+                    <li class="portfolio-filter">
+                        <button class="filter-btn" type="button">Веб-сайты</button>
                     </li>
-                    <li>
-                    <button class="filter-btn" type="button">Приложения</button>
+                    <li class="portfolio-filter">
+                        <button class="filter-btn" type="button">Приложения</button>
                     </li>
-                    <li>
-                    <button class="filter-btn" type="button">Дизайн</button>
+                    <li class="portfolio-filter">
+                        <button class="filter-btn" type="button">Дизайн</button>
                     </li>
-                    <li>
-                    <button class="filter-btn" type="button">Маркетинг</button>
+                    <li class="portfolio-filter">
+                        <button class="filter-btn" type="button">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="portfolio-list list">
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project1.jpg" alt="project1" width="370" height="294"/>
-                    <h3 class="portfolio-headline">Технокряк</h3>
-                    <p class="portfolio-filter">Веб-сайт</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project1.jpg" alt="project1" width="370" height="294"/>
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Технокряк</h3>
+                            <p class="portfolio-filter">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project2.jpg" alt="project2" width="370" height="294" />
-                    <h3 class="portfolio-headline">Постер New Orlean vs Golden Star</h3>
-                    <p class="portfolio-filter">Дизайн</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project2.jpg" alt="project2" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Постер New Orlean vs Golden Star</h3>
+                            <p class="portfolio-filter">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project3.jpg" alt="project3" width="370" height="294" />
-                    <h3 class="portfolio-headline">Ресторан Seafood</h3>
-                    <p class="portfolio-filter">Приложение</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project3.jpg" alt="project3" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Ресторан Seafood</h3>
+                            <p class="portfolio-filter">Приложение</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project4.jpg" alt="project4" width="370" height="294" />
-                    <h3 class="portfolio-headline">Проект Prime</h3>
-                    <p class="portfolio-filter">Маркетинг</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project4.jpg" alt="project4" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Проект Prime</h3>
+                            <p class="portfolio-filter">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project5.jpg" alt="project5" width="370" height="294" />
-                    <h3 class="portfolio-headline">Проект Boxes</h3>
-                    <p class="portfolio-filter">Приложение</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project5.jpg" alt="project5" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Проект Boxes</h3>
+                            <p class="portfolio-filter">Приложение</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project6.jpg" alt="project6" width="370" height="294" />
-                    <h3 class="portfolio-headline">Inspiration has no Borders</h3>
-                    <p class="portfolio-filter">Веб-сайт</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project6.jpg" alt="project6" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Inspiration has no Borders</h3>
+                            <p class="portfolio-filter">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project7.jpg" alt="project7" width="370" height="294" />
-                    <h3 class="portfolio-headline">Издание Limited Edition</h3>
-                    <p class="portfolio-filter">Дизайн</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project7.jpg" alt="project7" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Издание Limited Edition</h3>
+                            <p class="portfolio-filter">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
-                    <img class="portfolio-inner-logo" src="./img/portolio/project8.jpg" alt="project8" width="370" height="294" />
-                    <h3 class="portfolio-headline">Проект LAB</h3>
-                    <p class="portfolio-filter">Маркетинг</p>
+                        <img class="portfolio-inner-logo" src="./img/portolio/project8.jpg" alt="project8" width="370" height="294" />
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Проект LAB</h3>
+                            <p class="portfolio-filter">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="portfolio-inner-list">
                         <img class="portfolio-inner-logo" src="./img/portolio/project9.jpg" alt="project9" width="370" height="294" />
-                        <h3 class="portfolio-headline">Growing Business</h3>
-                        <p class="portfolio-filter">Приложение</p>
+                        <div class="portfolio-container">
+                            <h3 class="portfolio-headline">Growing Business</h3>
+                            <p class="portfolio-filter">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -117,9 +135,18 @@
         <div id="contacts" class="container">
             <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
             <address class="italic-no">
-                <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
-                <a href="mailto:info@example.com" class="contact-style link">info@example.com</a>
-                <a href="tel:+380991111111" class="contact-style link">+38 099 111 11 11</a>
+                <ul class="footer-list list">
+                    <li>
+                        <a href="https://goo.gl/maps/ccjUCnQ3BP5SnfPA9" class="map link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@example.com" class="contact-style link">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380991111111" class="contact-style link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+    
             </address>
         </div>
     </footer>
