--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="head">
+    <header class="">
         <div class="container head-container">
     
             <!--Header-->
